@@ -32,11 +32,11 @@
 #  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 #
 
-try:
-    import psyco
-    psyco.full()
-except:
-    pass
+#~ try:
+    #~ import psyco
+    #~ psyco.full()
+#~ except:
+    #~ pass
 
 
 from rpy import *
