@@ -1,4 +1,5 @@
 Current
+* added a report manager to show results in a html page with png images
 * possibility of using several output file per plugin
 * added a PNG output type
 * new plugin : 2D distribution of the optimums positions, with optionnal PCA
